--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "axios": "^1.2.0",
     "body-parser": "^1.20.1",
+    "bootstrap": "^3.4.1",
+    "bootstrap-vue": "^2.23.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jquery": "^3.6.1",
     "mongodb": "^4.12.1"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "nodemon": "^2.0.20"
   }
 }
